--- a/css/_polices.css
+++ b/css/_polices.css
@@ -1,11 +1,14 @@
 
-h1 {
-    color: #333333!important;
+h1,h2,h3,h4,h5,h6,p,label,.btn,a {
+    font-family: "helvetica";
+    font-weight: 400;
+    color: #575757!important;
 }
 
-.h1 {
-    font-size: 20px;
-    font-family: "Open Sans";
+h1 {
+    color: #333333!important;
+    font-size: 32px;
+    margin-bottom: 45px;
 }
 
 h2 {
@@ -16,7 +19,7 @@ h2 {
 h3 {
     font-size: 15px;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 600;
     color: #333333!important;
 }
 
@@ -26,10 +29,4 @@ h4 {
 
 p {
     font-size: 16px;
-}
-
-h1,h2,h3,h4,h5,h6,p,label,.btn,a {
-    font-family: "helvetica";
-    font-weight: 400;
-    color: #575757!important;
 }
