--- a/css/style.css
+++ b/css/style.css
@@ -90,10 +90,6 @@ a:hover {
     margin-top: 30px;
 }
 
-.voffset-lg {
-    margin-top: 80px;
-}
-
 .row-no-gutters {
     margin-right: 0;
     margin-left: 0;
@@ -105,136 +101,144 @@ a:hover {
     padding-left: 0;
 }
 
-#bloc-1-hero h1 {
-    font-size: 32px;
+
+/* ========================================================================= */
+/* Header */
+/* ========================================================================= */
+header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    height: 95px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* ========================================================================= */
-/* Nav Bar */
+/* NavBar */
 /* ========================================================================= */
-
-.navbar {
-    margin-bottom: 0;
-    z-index: 1;
+nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 57%;
+    /* background-color: yellowgreen; */
 }
 
-.navbar-header {
-    border-top: 1.5px;
-    border-bottom: 1.5px;
-    border-color: #ff0000;
-    border-color: #cccccc;
-}
-
-.navbar-brand {
-    height: auto;
-    font-size: 25px;
-    font-weight: normal;
-    font-weight: 600;
-    line-height: 44px;
-}
-
-.navbar-brand img {
-    max-height: 200px;
-    margin: 0 5px 0 0;
-    display: inline;
-}
-
-.navbar-brand img[src$=svg] {
-    min-width: 100px;
-}
-
-.nav-center .navbar-brand img {
-    margin: 0;
-}
-
-.navbar .nav {
-    padding-top: 2px;
-    margin-right: -16px;
-    float: right;
-    z-index: 1;
-}
-
-.nav > li {
-    float: left;
-    margin-top: 4px;
-    font-size: 20px;
-}
-
-.navbar-nav .open .dropdown-menu > li > a {
-    text-align: inherit;
-}
-
-.nav > li a:hover,
-.nav > li a:focus {
-    background: transparent;
-}
-
-.navbar-toggle {
-    margin: 10px 10px 0 0;
-    border: 0px;
-}
-
-.navbar-toggle:hover {
-    background: transparent!important;
-}
-
-.navbar-toggle .icon-bar {
-    background-color: rgba(0, 0, 0, .5);
-    width: 26px;
-}
-
-.nav-invert .navbar .nav {
-    float: left;
-}
-
-.nav-invert .navbar-header,
-.nav-invert .navbar-brand {
-    float: right;
-    position: relative;
-    z-index: 2;
-}
-
-.nav > li > .dropdown a {
-    background: none!important;
+.navbar-anchor {
     display: block;
-    padding: 14px 15px;
+    position: relative;
+    height: 53px;
+    width: 68px;
+    
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    border-color: lightgray;
+    
+    /* background-color: orange; */
 }
 
-nav .caret {
-    margin: 0 5px;
+.navbar-anchor figure {
+    display: block;
+    position: absolute;
+    margin-top: 7px;
+    margin-left: 15px;
+}
+
+.navbar-ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: center;
+    list-style: none;
+    height: 100%;
+    width: 20%;
+
+    /* background-color: dodgerblue; */
+}
+
+.navbar-ul a {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+
+/* ========================================================================= */
+/* Sections */
+/* ========================================================================= */
+.flex-center {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+}
+
+.container {
+    max-width: 1000px;
+}
+
+
+/* ========================================================================= */
+/* Section 2 - "Web design - Strategy - Illustrations" */
+/* ========================================================================= */
+.section2 h2 {
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 30px
+}
+
+.section2 .med-width-whitespace {
+    padding-left: 20%;
+    padding-right: 20%;
+}
+
+.citation {
+    width: 35%;
+    margin: 50px;
+    /* background-color: orange; */
+}
+
+.citation h2 {
+    margin: 5px;
+    font-style: italic;
+    font-weight: 600;
+    /* background-color: blueviolet; */
+}
+
+.citation p {
+    width: 100%;
+    font-size: 14px;
+    text-align: center;
+}
+
+
+/* ========================================================================= */
+/* Section 3 - "Nous souhaitons..." */
+/* ========================================================================= */
+.tight-width-whitespace {
+    width: 80%;
+}
+
+.tight-width-whitespace h2 {
+    width: 90%;
+    font-weight: 600;
+}
+
+.tight-width-whitespace p {
+    width: 75%;
+}
+
+.tight-width-whitespace a {
+    margin: 20px;
 }
 
 
 
 
-
-
-
-
-
-
-
-
-
-
+.photo-banniere {
+    padding-bottom: 15px;
+}
 
 
 .dropdown-menu .dropdown-menu {
@@ -261,7 +265,7 @@ nav .caret {
 
 .mg-md {
     margin-top: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .mg-lg {
@@ -288,11 +292,13 @@ button {
     outline: none!important;
 }
 
-.btn-rd {
-    border-radius: 40px;
-}
-
 .btn-clean {
+    margin-top: 22px;
+    padding: 12px 28px 12px 28px;
+    font-size: 16px;
+    font-weight: 600;
+
+    border-radius: 40px;
     border: 1px solid rgba(0, 0, 0, .08);
     border-bottom-color: rgba(0, 0, 0, .1);
     text-shadow: 0 1px 0 rgba(0, 0, 1, .1);
@@ -455,17 +461,6 @@ a[data-lightbox]:hover img {
     background: none;
 }
 
-.container {
-    max-width: 1000px;
-}
-
-.hero-bloc-text {
-    font-size: 38px;
-}
-
-.hero-bloc-text-sub {
-    font-size: 36px;
-}
 
 .statement-bloc-text {
     line-height: 26px;
@@ -477,36 +472,14 @@ a[data-lightbox]:hover img {
     margin: auto auto auto auto;
 }
 
-.tight-width-whitespace {
-    max-width: 600px;
-    margin: auto auto auto auto;
-}
-
-.cta-hero {
-    margin-top: 22px;
-    color: #FFFFFF!important;
-    text-transform: uppercase;
-    padding: 12px 28px 12px 28px;
-    font-size: 16px;
-    font-weight: 700;
-}
 
 .social {
-    max-width: 400px;
-    margin: auto;
     margin-top: 20px;
     margin-bottom: 40px;
 }
 
 .med-width-whitespace {
-    max-width: 800px;
-    margin: auto auto auto auto;
     box-shadow: 0px 0px 0px #000000;
-}
-
-.icons {
-    margin-bottom: 14px;
-    margin-top: 24px;
 }
 
 .portfolio-thumb {
