Modif pre footer

--- a/css/_colors.css
+++ b/css/_colors.css
@@ -30,12 +30,12 @@
     color: #44a1ad !important;
 }
 
-.btn-clean {
+.btn-contact {
     background: #F3976C;
     color: #FFFFFF!important;
 }
 
-.btn-clean:hover {
+.btn-contact:hover {
     background: #c27956!important;
     color: #FFFFFF!important;
 }
