--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ a:hover {
     width: 100%;
     clear: both;
     background: 50% 50% no-repeat;
-    padding: 0 50px;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -121,7 +120,7 @@ nav {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 57%;
+    width: 54%;
     /* background-color: yellowgreen; */
 }
 
@@ -171,11 +170,44 @@ nav {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-content: center;
     width: 100%;
 }
 
 .container {
     max-width: 1000px;
+}
+
+
+/* ========================================================================= */
+/* Section 1 */
+/* ========================================================================= */
+.section1 {
+    align-content: center;
+    position: relative;
+    height: 440px;
+}
+
+.bg-banniere {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.div1-section1 {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-between;
+    position: absolute;
+    height: 235px;
+}
+
+.btn-contact {
+    height: 45px;
+    width: 130px;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 40px;
 }
 
 
@@ -234,11 +266,41 @@ nav {
 }
 
 
+/* ========================================================================= */
+/* Section 4 - Portfolio */
+/* ========================================================================= */
 
 
-.photo-banniere {
-    padding-bottom: 15px;
+
+/* ========================================================================= */
+/* Section 5 - "Prêt pour redonner vie..." */
+/* ========================================================================= */
+.section5 {
+    position: relative;
+    overflow: hidden;
+    height: 366px;
 }
+
+.section5 figure {
+    position: absolute;
+    bottom: 0%;
+    height: 575px;
+}
+
+.div1-section5 {
+    position: absolute;
+}
+
+.div1-section5 h2 {
+    text-align: center;
+    font-size: 24px;
+    margin: 30px;
+}
+
+
+
+
+
 
 
 .dropdown-menu .dropdown-menu {
@@ -290,19 +352,6 @@ nav {
 
 button {
     outline: none!important;
-}
-
-.btn-clean {
-    margin-top: 22px;
-    padding: 12px 28px 12px 28px;
-    font-size: 16px;
-    font-weight: 600;
-
-    border-radius: 40px;
-    border: 1px solid rgba(0, 0, 0, .08);
-    border-bottom-color: rgba(0, 0, 0, .1);
-    text-shadow: 0 1px 0 rgba(0, 0, 1, .1);
-    box-shadow: 0 1px 3px rgba(0, 0, 1, .25), inset 0 1px 0 0 rgba(255, 255, 255, .15);
 }
 
 .sm-shadow {
@@ -496,6 +545,7 @@ a[data-lightbox]:hover img {
 }
 
 .bold-link {
+    font-size: 18px;
     font-weight: 900;
     text-decoration: underline!important;
 }
