--- a/css/_pictures.css
+++ b/css/_pictures.css
@@ -7,10 +7,6 @@
 
 .logo-Chouette {
     background: url("../img/logo.png") no-repeat;
-    display: block;
-
-    margin-right: auto;
-    margin-left: auto;
     height: 100px;
     width: 100px;
 }
@@ -29,8 +25,8 @@
 
 .bg-banniere {
     background-image: url("../img/la-chouette-agence-banniere.jpg");
-    /* height: 575px;
-    width: 1903px; */
+    /* width: 1903px;
+    height: 575px; */
 }
 
 .bg-presentation {
