--- a/css/_polices.css
+++ b/css/_polices.css
@@ -6,9 +6,9 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a {
 }
 
 h1 {
-    color: #333333!important;
+    color: white!important;
     font-size: 32px;
-    margin-bottom: 45px;
+    margin: 0px;
 }
 
 h2 {
@@ -28,5 +28,5 @@ h4 {
 }
 
 p {
-    font-size: 16px;
+    font-size: 18px;
 }
