--- a/css/style.css
+++ b/css/style.css
@@ -7,100 +7,6 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-a,
-button {
-    transition: all .3s ease-in-out;
-    outline: none!important;
-}
-
-a:hover {
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.bloc {
-    width: 100%;
-    clear: both;
-    background: 50% 50% no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    position: relative;
-}
-
-.bloc .container {
-    position: relative;
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.bloc-lg {
-    padding: 100px 50px;
-}
-
-.bloc-md {
-    padding: 50px;
-}
-
-.bloc-sm {
-    padding: 20px 50px;
-}
-
-.bg-center,
-.bg-l-edge,
-.bg-r-edge,
-.bg-t-edge,
-.bg-b-edge,
-.bg-tl-edge,
-.bg-bl-edge,
-.bg-tr-edge,
-.bg-br-edge,
-.bg-repeat {
-    -webkit-background-size: auto!important;
-    -moz-background-size: auto!important;
-    -o-background-size: auto!important;
-    background-size: auto!important;
-}
-
-.bg-repeat {
-    background: repeat;
-}
-
-.bg-t-edge {
-    background: top no-repeat;
-}
-
-.bloc-bg-texture::before {
-    content: "";
-    background-size: 2px 2px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-
-.b-parallax {
-    background-attachment: fixed;
-}
-
-.voffset {
-    margin-top: 30px;
-}
-
-.row-no-gutters {
-    margin-right: 0;
-    margin-left: 0;
-}
-
-.row.row-no-gutters > [class^="col-"],
-.row.row-no-gutters > [class*=" col-"] {
-    padding-right: 0;
-    padding-left: 0;
-}
-
-
 /* ========================================================================= */
 /* Header */
 /* ========================================================================= */
@@ -109,7 +15,9 @@ header {
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
-    height: 95px;
+    height: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 
@@ -120,7 +28,9 @@ nav {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 54%;
+    width: 1030px;
+    margin-left: 30px;
+    margin-right: 30px;
     /* background-color: yellowgreen; */
 }
 
@@ -151,7 +61,9 @@ nav {
     align-content: center;
     list-style: none;
     height: 100%;
-    width: 20%;
+    width: 160px;
+    margin: 0%;
+    padding: 0%;
 
     /* background-color: dodgerblue; */
 }
@@ -174,24 +86,21 @@ nav {
     width: 100%;
 }
 
-.container {
-    max-width: 1000px;
-}
+.texture-paper {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+} 
 
 
 /* ========================================================================= */
 /* Section 1 */
 /* ========================================================================= */
 .section1 {
-    align-content: center;
     position: relative;
     height: 440px;
-}
-
-.bg-banniere {
-    position: absolute;
-    height: 100%;
-    width: 100%;
+    background-attachment: fixed;
+    background-position: top 0 left 50%;
 }
 
 .div1-section1 {
@@ -210,32 +119,44 @@ nav {
     border-radius: 40px;
 }
 
+.btn-contact:hover {
+    text-decoration: none;
+}
+
 
 /* ========================================================================= */
 /* Section 2 - "Web design - Strategy - Illustrations" */
 /* ========================================================================= */
+.section2 {
+    height: auto;
+}
+
+
 .section2 h2 {
+    width: 100%;
     text-align: center;
     margin-top: 50px;
     margin-bottom: 30px
 }
 
-.section2 .med-width-whitespace {
-    padding-left: 20%;
-    padding-right: 20%;
+.div1-section2 {
+    justify-content: space-between;
+    width: 1150px;
+
+}
+.categories-section2 {
+    width: 30%;
 }
 
 .citation {
-    width: 35%;
+    width: 660px;
     margin: 50px;
-    /* background-color: orange; */
 }
 
 .citation h2 {
     margin: 5px;
     font-style: italic;
     font-weight: 600;
-    /* background-color: blueviolet; */
 }
 
 .citation p {
@@ -248,28 +169,69 @@ nav {
 /* ========================================================================= */
 /* Section 3 - "Nous souhaitons..." */
 /* ========================================================================= */
-.tight-width-whitespace {
-    width: 80%;
+.section3 {
+    position: relative;
+    height: 600px;
+    background-attachment: fixed;
+    background-position: top 0 left 50%;
 }
 
-.tight-width-whitespace h2 {
-    width: 90%;
+.div2-section3 {
+    align-content: space-between;
+    padding: 30px;
+    height: 75%;
+    width: 820px;
+}
+
+.div2-section5 h2 {
+    width: 85%;
     font-weight: 600;
 }
 
-.tight-width-whitespace p {
+.div2-section3 p {
     width: 75%;
 }
 
-.tight-width-whitespace a {
-    margin: 20px;
+.div2-section3 h2,
+.div2-section3 p,
+.div2-section3 a {
+    margin: 0px;
+    padding: 0px;
 }
 
 
 /* ========================================================================= */
 /* Section 4 - Portfolio */
 /* ========================================================================= */
+.section4 h2 {
+    width: 100%;
+    margin-top: 100px;
+    margin-bottom: 30px;
+}
 
+.main-portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-between;
+    width: 40%;
+    height: auto;
+    margin-bottom: 100px;
+}
+
+.sub-portfolio {
+    margin: 50px;
+    height: 450px;
+    width: 270px;
+}
+
+.sub-portfolio img {
+    width: 100%;
+}
+
+.sub-portfolio a:hover {
+    width: 100%;
+}
 
 
 /* ========================================================================= */
@@ -277,14 +239,9 @@ nav {
 /* ========================================================================= */
 .section5 {
     position: relative;
-    overflow: hidden;
+    object-fit: cover;
     height: 366px;
-}
-
-.section5 figure {
-    position: absolute;
-    bottom: 0%;
-    height: 575px;
+    background-position: bottom 0% left 50%;
 }
 
 .div1-section5 {
@@ -325,34 +282,8 @@ nav {
     float: right;
 }
 
-.mg-md {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
 
-.mg-lg {
-    margin-top: 10px;
-    margin-bottom: 40px;
-}
 
-.btn {
-    margin: 0 5px 5px 0;
-}
-
-.btn.pull-right {
-    margin: 0 0 5px 5px;
-}
-
-.btn-d,
-.btn-d:hover,
-.btn-d:focus {
-    color: #FFF;
-    background: rgba(0, 0, 0, .3);
-}
-
-button {
-    outline: none!important;
-}
 
 .sm-shadow {
     text-shadow: 0 1px 2px rgba(0, 0, 0, .3);
@@ -408,19 +339,19 @@ a[data-lightbox] {
 }
 
 a[data-lightbox]:hover::before {
-    content: "+";
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
-    font-size: 32px;
-    width: 50px;
-    height: 50px;
-    margin-left: -25px;
-    border-radius: 50%;
-    background: rgba(0, 0, 0, .6);
-    color: #FFF;
-    font-weight: 100;
     z-index: 1;
     position: absolute;
+    content: "+";
+    font-size: 35px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    color: #FFF;
+    font-weight: 100;
+    margin-left: -25px;
     top: 50%;
+    left: 50%;
+    background: rgba(0, 0, 0, .6);
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
 }
@@ -447,10 +378,16 @@ a[data-lightbox]:hover img {
     margin: 0 auto;
 }
 
+.close-lightbox,
+.lightbox-caption,
+.next-lightbox,
+.prev-lightbox {
+    background: rgba(0, 0, 0, 0.7);
+}
+
+
 .lightbox-caption {
     padding: 20px;
-    color: #FFF;
-    background: rgba(0, 0, 0, .5);
     position: absolute;
     left: 15px;
     right: 15px;
@@ -464,7 +401,6 @@ a[data-lightbox]:hover img {
     top: 20px;
     right: 20px;
     z-index: 20;
-    background: rgba(0, 0, 0, .5);
     border: none;
     line-height: 30px;
     padding: 0 9px 5px;
@@ -480,9 +416,7 @@ a[data-lightbox]:hover img {
 
 .next-lightbox,
 .prev-lightbox {
-    font-size: 20px;
-    color: rgba(255, 255, 255, .9);
-    background: rgba(0, 0, 0, .5);
+    font-size: 40px;
     transition: all .2s ease-in-out;
     position: absolute;
     top: 45%;
@@ -525,10 +459,6 @@ a[data-lightbox]:hover img {
 .social {
     margin-top: 20px;
     margin-bottom: 40px;
-}
-
-.med-width-whitespace {
-    box-shadow: 0px 0px 0px #000000;
 }
 
 .portfolio-thumb {
