--- a/css/pictures.css
+++ b/css/pictures.css
@@ -1,21 +1,21 @@
 
 .texture-paper {
-    background: url("../img/texture-paper.png") repeat;
+    background: url("../img/texture-paper.webp") repeat;
 }
 
 .section1,
 .section5 {
-    background-image: url("../img/la-chouette-agence-banniere.jpg");
+    background-image: url("../img/la-chouette-agence-banniere.webp");
 }
 
 .section3 {
-    background-image: url("../img/image-de-presentation.jpg");
+    background-image: url("../img/image-de-presentation.webp");
 }
 
 .section4 {
-    background-image: url("../img/lines-h2-bg.png");
+    background-image: url("../img/lines-h2-bg.webp");
 }
 
 .bg-dots-bg {
-    background-image: url("../img/dots-bg.png");
+    background-image: url("../img/dots-bg.webp");
 }
