--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,11 +11,11 @@
 @media screen and (min-width: 320px) and (max-width : 420px) {
     .section1,
     .section5 {
-        background-image: url("../img/la-chouette-agence-banniere_420px.jpg");
+        background-image: url("../img/la-chouette-agence-banniere_420px.webp");
     }
 
     .section3 {
-        background-image: url("../img/image-de-presentation_420px.jpg");
+        background-image: url("../img/image-de-presentation_420px.webp");
     }
 }
 
@@ -23,11 +23,11 @@
 @media screen and (min-width: 421px) and (max-width : 1024px) {
     .section1,
     .section5 {
-        background-image: url("../img/la-chouette-agence-banniere_1024px.jpg");
+        background-image: url("../img/la-chouette-agence-banniere_1024px.webp");
     }
 
     .section3 {
-        background-image: url("../img/image-de-presentation_1024px.jpg");
+        background-image: url("../img/image-de-presentation_1024px.webp");
     }
 }
 
