--- a/css/colors.css
+++ b/css/colors.css
@@ -35,18 +35,22 @@
     color: #aa7f08 !important;
 }
 
-.btn-contact {
-    text-decoration: none;
+.section1-contact,
+.btn,
+.footer-contact {
     background: #F3976C;
+}
+
+.btn {
+    text-decoration: none;
     color: #FFFFFF!important;
 }
 
-.btn-contact:hover,
-.btn-contact:active {
+.btn:hover,
+.btn:active {
     text-decoration: none;
     background: #c27956!important;
 }
-
 
 .ltc-atomic-tangerine {
     color: #F3976C!important;
@@ -69,11 +73,15 @@
     background-color: rgba(0, 0, 0, .5);
 }
 
+.icons {
+    margin-bottom: 14px;
+    margin-top: 24px;
+}
 
-/* ========================================================================= */
-/* Form */
-/* ========================================================================= */
+.icon-md {
+    font-size: 30px!important;
+}
 
-.form-control:focus {
-    background-color: #f3976c5b;
+.icon-lg {
+    font-size: 60px!important;
 }
